--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,15 @@
+@font-face {
+  font-family: myFirstFont;
+  src: url('./Fonts/BikinCoffee-rgApB.otf');
+}
+
+.changefont{
+  font-family: myFirstFont;
+  font-size: 35px;
+  color: black;
+}
 .footer {
+  font-family: myFirstFont;
   position:fixed;
   left: 0;
   bottom: 0;
